k8s/apps/port-frontend/service.yml
---
kind: Service
apiVersion: v1
metadata:
  name: port-frontend
  namespace: apps
  labels:
    app: port-frontend
spec:
    type: ClusterIP
    selector:
      app: port-frontend
    ports:
      - protocol: TCP
        port: 80
        targetPort: 80
