k8s/apps/port-frontend/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: port-frontend
  namespace: apps
  labels:
    app: port-frontend
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: / # entrypoint
            pathType: Exact
            backend:
              service:
                name: port-frontend
                port:
                  number: 80
          - path: /ui # react routers
            pathType: Prefix
            backend:
              service:
                name: port-frontend
                port:
                  number: 80
          - path: /static # Static assets
            pathType: Prefix
            backend:
              service:
                name: port-frontend
                port:
                  number: 80
